Changed nsPlainTextSerializer to try NCR if CER conversion fails, bug 40350, r=akkana, sr=kin, a=asa.